--- a/.github/workflows/build-push-dockerhub.yml
+++ b/.github/workflows/build-push-dockerhub.yml
@@ -1,18 +1,33 @@
 #######################################################
-### example for Github Container Registry (ghcr.io)
 ### example for Docker Hub
 ###
 ### Your container image name will be:
-###   ghcr.io/<github-account>/<repo-name>:latest
+###   <DOCKERHUB_USERNAME>/<github-account>-<repo-name>:latest
 ###
 #######################################################
+
+#######################################################
+# Requirements:
+#
+# 1. You must have a dockerhub access token
+#    Ref: https://docs.docker.com/security/for-developers/access-tokens/
+#
+# 2. You must add your dockerhub username & access token as Github Actions secrets
+#    Ref: https://docs.github.com/en/actions/security-for-github-actions/security-guides/using-secrets-in-github-actions
+#
+#    Go to your repository Settings > Secrets & Variables > Actions
+#    > Repository secrets > New repository secret
+#
+#    Add (from step #1) your:
+#      DOCKERHUB_USERNAME
+#      DOCKERHUB_TOKEN
 #######################################################
 
 #######################################################
 ### Uncomment all lines below to use this template  ###
 #######################################################
 
-# name: "Docker build & push - GHCR"
+# name: "Docker build & push - Dockerhub"
 #
 # concurrency:
 #   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -25,8 +40,7 @@
 #   workflow_dispatch:
 #
 # env:
-#   REGISTRY: ghcr.io
-#   IMAGE_NAME: ${{ github.repository }}:latest
+#   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
 #
 # jobs:
 #   docker-build-push:
@@ -35,6 +49,10 @@
 #       packages: write
 #
 #     steps:
+#       - name: Set IMAGE_NAME
+#         run: |
+#           echo "IMAGE_NAME=${{ env.DOCKERHUB_USERNAME }}/$(echo "${{ github.repository }}" | sed 's|/|-|'):latest" >> $GITHUB_ENV
+#
 #       - name: Checkout repository
 #         uses: actions/checkout@v4
 #
@@ -47,12 +65,11 @@
 #       - name: Log in to the Container registry
 #         uses: docker/login-action@v3
 #         with:
-#           registry: ${{ env.REGISTRY }}
-#           username: ${{ github.actor }}
-#           password: ${{ secrets.GITHUB_TOKEN }}
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
 #
 #       - name: "Build and push Docker image"
 #         uses: docker/build-push-action@v6
 #         with:
 #           push: true
-#           tags: ${{ env.REGISTRY }}/${{env.IMAGE_NAME}}
+#           tags: ${{env.IMAGE_NAME}}
