--- a/.github/workflows/build-push-github.yml
+++ b/.github/workflows/build-push-github.yml
@@ -12,47 +12,47 @@
 ### Uncomment all lines below to use this template  ###
 #######################################################
 
-# name: "Docker build & push - GHCR"
-#
-# concurrency:
-#   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-#   cancel-in-progress: true
-#
-# on:
-#   pull_request:
-#     types: [closed]
-#   push:
-#   workflow_dispatch:
-#
-# env:
-#   REGISTRY: ghcr.io
-#   IMAGE_NAME: ${{ github.repository }}:latest
-#
-# jobs:
-#   docker-build-push:
-#     runs-on: ubuntu-latest
-#     permissions:
-#       packages: write
-#
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v4
-#
-#       - name: Set up QEMU
-#         uses: docker/setup-qemu-action@v3
-#
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v3
-#
-#       - name: Log in to the Container registry
-#         uses: docker/login-action@v3
-#         with:
-#           registry: ${{ env.REGISTRY }}
-#           username: ${{ github.actor }}
-#           password: ${{ secrets.GITHUB_TOKEN }}
-#
-#       - name: "Build and push Docker image"
-#         uses: docker/build-push-action@v6
-#         with:
-#           push: true
-#           tags: ${{ env.REGISTRY }}/${{env.IMAGE_NAME}}
+ name: "Docker build & push - GHCR"
+
+ concurrency:
+   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+   cancel-in-progress: true
+
+ on:
+   pull_request:
+     types: [closed]
+   push:
+   workflow_dispatch:
+
+ env:
+   REGISTRY: ghcr.io
+   IMAGE_NAME: ${{ github.repository }}:latest
+
+ jobs:
+   docker-build-push:
+     runs-on: ubuntu-latest
+     permissions:
+       packages: write
+
+     steps:
+       - name: Checkout repository
+         uses: actions/checkout@v4
+
+       - name: Set up QEMU
+         uses: docker/setup-qemu-action@v3
+
+       - name: Set up Docker Buildx
+         uses: docker/setup-buildx-action@v3
+
+       - name: Log in to the Container registry
+         uses: docker/login-action@v3
+         with:
+           registry: ${{ env.REGISTRY }}
+           username: ${{ github.actor }}
+           password: ${{ secrets.GITHUB_TOKEN }}
+
+       - name: "Build and push Docker image"
+         uses: docker/build-push-action@v6
+         with:
+           push: true
+           tags: ${{ env.REGISTRY }}/${{env.IMAGE_NAME}}
